//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique]
  phone String [unique, not null]
  country String [not null]
  password String [not null]
  tAndCConsent Boolean [not null]
  firstname String
  lastname String
  blockedListUserIds String[] [not null]
  skippedUserIds String[] [not null]
  firebaseCustomToken String
  fcmRegisterationTokens String[] [not null]
  wallet Wallet
  chats Chat [not null]
  prompts Prompt [not null]
  Request Request [not null]
  profileId String
  Profile Profile
}

Table Profile {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  completed Boolean
  isVerified Boolean [default: false]
  name String
  showTruncatedName Boolean
  hideDatingPreference Boolean [default: false]
  hidePronouns Boolean [default: false]
  dob String
  gender DatingPreference
  pronouns String
  hometown String
  height String
  location String
  locationCoordinates String[] [not null]
  zodiac ZodiacSign
  languages String[] [not null]
  photoURLs String[] [not null]
  datingPreference DatingPreference
  interests String
  work String
  lifestyle String
  values String
  user User [not null]
  userId String [unique, not null]
}

Table Wallet {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
  userId String [unique, not null]
}

Table Chat {
  id String [pk]
  roomId String [not null]
  status ChatStatus [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
  userId String [not null]
}

Table Prompt {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
  userId String [unique, not null]
}

Table Request {
  id String [pk]
  type RequestType [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
  userId String [not null]
  requesteeUserId String [not null]
  requesterProfileId String [not null]
  requesteeProfileId String [not null]
  expiry DateTime [not null]
  status RequestStatus [not null]
  challenge String
  challengeVerification String
  challengeVerificationStatus ChallengeVerificationStatus [not null, default: 'NOT_VERIFIED']
}

Enum RequestType {
  EXCLUSIVE
  HYPER_EXCLUSIVE
}

Enum RequestStatus {
  ACTIVE
  EXPIRED
  REJECTED
  MATCHED
  BUSY
}

Enum ChatStatus {
  ACTIVE
  INACTIVE
}

Enum ZodiacSign {
  Aries
  Taurus
  Gemini
  Cancer
  Leo
  Virgo
  Libra
  Scorpio
  Sagittarius
  Capricorn
  Aquarius
  Pisces
}

Enum ChallengeVerificationStatus {
  VERIFIED
  NOT_VERIFIED
}

Enum DatingPreference {
  MEN
  WOMEN
  NONBINARY
}

Ref: Profile.userId - User.id

Ref: Wallet.userId - User.id

Ref: Chat.userId > User.id

Ref: Prompt.userId > User.id

Ref: Request.userId > User.id